<?xml version="1.0" encoding="utf-8"?>
<!--
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_api_token"
            android:text="@string/info_api_token"
            android:paddingTop="10dp"
            android:paddingBottom="-5dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:paddingTop="-5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/api_token"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:hint="@string/api_token_hint" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_token"
                android:id="@+id/get_api_token"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/action_group"
            android:checkedButton="@+id/state">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:text="@string/info_action"
                android:id="@+id/info_action" />

            <RadioButton
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state_hint"/>

            <RadioButton
                android:id="@+id/toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toggle_hint"/>

        </RadioGroup>

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_debug_notifications"
            android:id="@+id/notificaitons" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_configuration"
            android:id="@+id/test"/>
    </LinearLayout>
    </ScrollView>
